--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "html-loader": "^0.4.3",
     "imports-loader": "^0.6.5",
     "jasmine-core": "^2.4.1",
+    "json-loader": "^0.5.4",
     "karma": "^0.13.19",
     "karma-chrome-launcher": "^0.2.2",
     "karma-mocha": "^0.2.1",
@@ -85,6 +86,7 @@
     "rimraf": "^2.5.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "svg-react-loader": "^0.3.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.11",
     "webpack-dev-middleware": "^1.5.0",
